fixed feedback submit button (before: sticking out on rebuild).

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -105,7 +105,6 @@ h3 {
 
 #report_bug_textarea {
     width: 95%;
-    height: 95%;
 }
 
 #login form {
